--- a/index.html
+++ b/index.html
@@ -80,6 +80,17 @@
         </section>
         <section class="bianco">
             <div class="container">
+                <div class="top-box-bianco clearfix">
+                    <div class="box-bianco-left">
+
+                    </div>
+                    <div class="box-bianco-right">
+
+                    </div>
+                </div>
+                <div class="bottom-box-bianco">
+
+                </div>
 
             </div>
         </section>
