htmlcss-hubspot struttura

--- a/index.html
+++ b/index.html
@@ -81,14 +81,21 @@
         <section class="bianco">
             <div class="container">
                 <div class="top-box-bianco clearfix">
-                    <div class="box-bianco-left">
+                    <div class="top-box-bianco-left">
 
                     </div>
-                    <div class="box-bianco-right">
+                    <div class="top-box-bianco-right">
 
                     </div>
                 </div>
-                <div class="bottom-box-bianco">
+                <div class="bottom-box-bianco clearfix">
+                    <div class="bottom-box-bianco-left">
+                        <h2>start growing with hubspot today</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident</p>
+                    </div>
+                    <div class="bottom-box-bianco-right">
+                        <img src="" alt="woman-smile">
+                    </div>
 
                 </div>
 
@@ -96,7 +103,28 @@
         </section>
         <footer>
             <div class="container">
+                <div class="top-footer clearfix">
+                    <div class="top-footer-box"></div>
+                    <div class="top-footer-box"></div>
+                    <div class="top-footer-box"></div>
+                    <div class="top-footer-box"></div>
+                </div>
+                <div class="languange">
+                    <ul>
+                        <li>English</li>
+                    </ul>
+                    <hr>
+                </div>
 
+
+                <div class="footer-bottom clearfix">
+                    <div class="footer-bottom-left">
+
+                    </div>
+                    <div class="footer-bottom-right">
+
+                    </div>
+                </div>
             </div>
         </footer>
 
