--- a/index.html
+++ b/index.html
@@ -8,17 +8,47 @@
         <title>HubSpot</title>
     </head>
     <body>
-        <header>
-            <div class="top-header">
-                <div class="container">
 
+
+        <div class="fixed-bar clearfix">
+            <div class="container">
+                <div class="fixed-bar-left">
+                    <i class="fas fa-globe"></i>
+                    <div class="lang-choose">english</div>
+                    <i class="fas fa-chevron-down"></i>
+                    <div class="contact-sales">contact sales</div>
+                </div>
+
+                <div class="fixed-bar-right">
+                    <i class="fas fa-search"></i>
+                    <button type="button" name="button">login</button>
+                    <button type="button" name="button">GetHubSpotFree</button>
                 </div>
             </div>
-            <div class="main-bar">
+        </div>
+
+        <header>
+
+            <div class="main-bar clearfix">
                 <div class="container">
 
                     <div id="logo">
+                        <img src="img/logo.png" alt="logo">
                     </div>
+                    <nav>
+                        <ul class="clearfix">
+                            <li><a href="#">software</a></li>
+                            <li><a href="#"><i class="fas fa-chevron-down"></i></a></li>
+                            <li><a href="#">pricing</a></li>
+                            <li><a href="#">software</a></li>
+                            <li><a href="#">resources</a></li>
+                            <li><a href="#"><i class="fas fa-chevron-down"></i></a></li>
+                            <li><a href="#">patners</a></li>
+                            <li><a href="#"><i class="fas fa-chevron-down"></i></a></li>
+                            <li><a href="#">about</a></li>
+                            <li><a href="#"><i class="fas fa-chevron-down"></i></a></li>
+                        </ul>
+                    </nav>
                 </div>
             </div>
 
@@ -27,7 +57,9 @@
 
                     <div class="jumbotron">
                         <h1>There's a better way to grow.</h1>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                        <p>Marketing, sales, and service software that helps your business grow without compromise. Because “good for the business” should also mean “good for the customer.”</p>
+                        <button type="button" name="button">Get HubSpot free</button>
+                        <p>Get started with FREE tools, and upgrade as you grow.</p>
                     </div>
                 </div>
             </div>
@@ -36,12 +68,29 @@
         <main>
             <div class="container">
                 <div class="top box">
-                    <img src="" alt="cube">
+                    <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/home/2018/Integrations_Illustration@2x.png" alt="cube">
                     <h2>Powerful Alone. Better together</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                    <p>HubSpot offers a full stack of software for marketing, sales, and customer service, with a completely free CRM at its core. They’re powerful alone — but even better when used together.</p>
                 </div>
-                <div class="bottom box">
+                <div class="bottom box clearfix">
+                    <div class="box-bottom-left">
+                        <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/_style-guide/sword-sprocket/CRM-Illustration.svg" alt="book">
+                        <button type="button" name="button">Learn More</button>
+                    </div>
+                    <div class="box-bottom-right">
+                        <div class="box-bottom-right-text">
+                            <h4>Free HubSpot CMR</h4>
+                            <p>Everything you need to organize, track, and build better relationships with leads and customers. Yes, it's 100% free. Forever.</p>
+                            <p>POPULAR FEATURES</p>
+                            <hr>
+                            <ul>
+                                <li><i class="fas fa-check-circle"></i> contact inshights</li>
+                                <li><i class="fas fa-check-circle"></i> deals</li>
+                                <li><i class="fas fa-check-circle"></i> tasks</li>
+                            </ul>
 
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="container clearfix">
@@ -109,7 +158,7 @@
                     <div class="top-footer-box"></div>
                     <div class="top-footer-box"></div>
                 </div>
-                <div class="languange">
+                <div class="languanges">
                     <ul>
                         <li>English</li>
                     </ul>
