--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
             <div class="container">
                 <div class="fixed-bar-left">
                     <i class="fas fa-globe"></i>
-                    <div class="lang-choose">english</div>
+                    <div class="lang-choose"><a href="#">english</a></div>
                     <i class="fas fa-chevron-down"></i>
-                    <div class="contact-sales">contact sales</div>
+                    <div class="contact-sales"><a href="#">contact sales</a></div>
                 </div>
 
                 <div class="fixed-bar-right">
@@ -95,14 +95,52 @@
             </div>
             <div class="container clearfix">
                 <div class="card">
+                    <div class="card-container">
+                        <img src="https://www.hubspot.com/hubfs/Marketing-Hub-Free.svg" alt="circles">
+                        <h4> marketing hub</h4>
+                        <p>Marketing software to help you grow traffic, convert more visitors, and run complete inbound marketing campaigns at scale.</p>
+                        <hr>
+                        <p>popular features</p>
+                        <ul>
+                            <li><i class="fas fa-check-circle"></i> lead generation</li>
+                            <li><i class="fas fa-check-circle"></i> marketing automation</li>
+                            <li><i class="fas fa-check-circle"></i> analytics</li>
+                        </ul>
+                        <button type="button" name="button">learn more</button>
 
+                    </div>
                 </div>
                 <div class="card">
-
+                    <div class="card-container">
+                        <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/_style-guide/sword-sprocket/Sales-Professional-Illustration.svg" alt="circles">
+                        <h4> marketing hub</h4>
+                        <p>Marketing software to help you grow traffic, convert more visitors, and run complete inbound marketing campaigns at scale.</p>
+                        <hr>
+                        <p>popular features</p>
+                        <ul>
+                            <li><i class="fas fa-check-circle"></i> lead generation</li>
+                            <li><i class="fas fa-check-circle"></i> marketing automation</li>
+                            <li><i class="fas fa-check-circle"></i> analytics</li>
+                        </ul>
+                        <button type="button" name="button">learn more</button>
+                    </div>
                 </div>
                 <div class="card">
-
+                    <div class="card-container">
+                        <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/_style-guide/sword-sprocket/Service-Hub-Illustration.svg" alt="circles">
+                        <h4> marketing hub</h4>
+                        <p>Marketing software to help you grow traffic, convert more visitors, and run complete inbound marketing campaigns at scale.</p>
+                        <hr>
+                        <p>popular features</p>
+                        <ul>
+                            <li><i class="fas fa-check-circle"></i> lead generation</li>
+                            <li><i class="fas fa-check-circle"></i> marketing automation</li>
+                            <li><i class="fas fa-check-circle"></i> analytics</li>
+                        </ul>
+                        <button type="button" name="button">learn more</button>
+                    </div>
                 </div>
+
             </div>
         </main>
         <section class="azzurro">
