inizio section azzurra

--- a/index.html
+++ b/index.html
@@ -151,7 +151,13 @@
                 </div>
                 <div class="icons-box">
                     <div class="first-row clearfix">
-                        <div class="icon-box"></div>
+                        <div class="icon-box">
+                            <div class="icon-box-container">
+                                <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_agency.svg" alt="hands">
+                                <h2>150</h2>
+                                <p>HubSpot user groups</p>
+                            </div>
+                        </div>
                         <div class="icon-box"></div>
                         <div class="icon-box"></div>
                         <div class="icon-box"></div>
