può solo migliorare

--- a/index.html
+++ b/index.html
@@ -158,15 +158,58 @@
                                 <p>HubSpot user groups</p>
                             </div>
                         </div>
-                        <div class="icon-box"></div>
-                        <div class="icon-box"></div>
-                        <div class="icon-box"></div>
+                        <div class="icon-box">
+                            <div class="icon-box-container">
+                                <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_agency.svg" alt="hands">
+                                <h2>150</h2>
+                                <p>HubSpot user groups</p>
+                            </div>
+                        </div>
+                        <div class="icon-box">
+                            <div class="icon-box-container">
+                                <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_agency.svg" alt="hands">
+                                <h2>150</h2>
+                                <p>HubSpot user groups</p>
+                            </div>
+                        </div>
+                        <div class="icon-box">
+                            <div class="icon-box-container">
+                                <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_agency.svg" alt="hands">
+                                <h2>150</h2>
+                                <p>HubSpot user groups</p>
+                            </div>
+                        </div>
+
                     </div>
                     <div class="second-row clearfix">
-                        <div class="icon-box"></div>
-                        <div class="icon-box"></div>
-                        <div class="icon-box"></div>
-                        <div class="icon-box"></div>
+                        <div class="icon-box">
+                            <div class="icon-box-container">
+                                <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_agency.svg" alt="hands">
+                                <h2>150</h2>
+                                <p>HubSpot user groups</p>
+                            </div>
+                        </div>
+                        <div class="icon-box">
+                            <div class="icon-box-container">
+                                <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_agency.svg" alt="hands">
+                                <h2>150</h2>
+                                <p>HubSpot user groups</p>
+                            </div>
+                        </div>
+                        <div class="icon-box">
+                            <div class="icon-box-container">
+                                <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_agency.svg" alt="hands">
+                                <h2>150</h2>
+                                <p>HubSpot user groups</p>
+                            </div>
+                        </div>
+                        <div class="icon-box">
+                            <div class="icon-box-container">
+                                <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_agency.svg" alt="hands">
+                                <h2>150</h2>
+                                <p>HubSpot user groups</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -175,10 +218,34 @@
             <div class="container">
                 <div class="top-box-bianco clearfix">
                     <div class="top-box-bianco-left">
-
+                        <h2>64,500</h2>
+                        <p>customers in over <strong>120</strong> countries growing their businesses with HubSpot</p>
                     </div>
-                    <div class="top-box-bianco-right">
-
+                    <div class="top-box-bianco-right clearfix">
+                        <div class="partner">
+                            <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/home/home_page_logos_June_2019/Atlassian-horizontal-blue@2x.png" alt="">
+                        </div>
+                        <div class="partner">
+                            <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/home/home_page_logos_June_2019/doordash_owler_20181011_194113_original@2x.png" alt="">
+                        </div>
+                        <div class="partner">
+                            <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/home/home_page_logos_June_2019/g2crowd-logo@2x.png" alt="">
+                        </div>
+                        <div class="partner">
+                            <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/homepage/Vertical_Sabaeus_RGB.svg" alt="">
+                        </div>
+                        <div class="partner">
+                            <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/home/home_page_logos_June_2019/Subaru_Logo_v2_186x63@2x.png" alt="">
+                        </div>
+                        <div class="partner">
+                            <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/home/home_page_logos_June_2019/Wistia_logo@2x.png" alt="">
+                        </div>
+                        <div class="partner">
+                            <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/home/home_page_logos_June_2019/Classpass-logo@2x.png" alt="">
+                        </div>
+                        <div class="partner">
+                            <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/home/home_page_logos_June_2019/VMware_logo_gry_RGB_300dpi@2x.png" alt="">
+                        </div>
                     </div>
                 </div>
                 <div class="bottom-box-bianco clearfix">
