--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8">
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
         <link rel="stylesheet" href="css/style.css">
         <title>HubSpot</title>
@@ -223,38 +223,41 @@
                     </div>
                     <div class="top-box-bianco-right clearfix">
                         <div class="partner">
-                            <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/home/home_page_logos_June_2019/Atlassian-horizontal-blue@2x.png" alt="">
+                            <img src="https://web.archive.org/web/20191130185648im_/https://www.hubspot.com/hubfs/assets/hubspot.com/home/home_page_logos_June_2019/Atlassian-horizontal-blue@2x.png" alt="Atlassian">
                         </div>
                         <div class="partner">
-                            <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/home/home_page_logos_June_2019/doordash_owler_20181011_194113_original@2x.png" alt="">
+                            <img src="https://web.archive.org/web/20191130185650im_/https://www.hubspot.com/hubfs/assets/hubspot.com/home/home_page_logos_June_2019/doordash_owler_20181011_194113_original@2x.png" alt="doordash">
                         </div>
                         <div class="partner">
-                            <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/home/home_page_logos_June_2019/g2crowd-logo@2x.png" alt="">
+                            <img src="https://web.archive.org/web/20191130185651im_/https://www.hubspot.com/hubfs/assets/hubspot.com/home/home_page_logos_June_2019/g2crowd-logo@2x.png" alt="g2crowd">
                         </div>
                         <div class="partner">
-                            <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/homepage/Vertical_Sabaeus_RGB.svg" alt="">
+                            <img src="https://web.archive.org/web/20191130185652im_/https://www.hubspot.com/hubfs/assets/hubspot.com/home/home_page_logos_June_2019/purple-logo@2x.png" alt="Purple">
                         </div>
                         <div class="partner">
-                            <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/home/home_page_logos_June_2019/Subaru_Logo_v2_186x63@2x.png" alt="">
+                            <img src="https://web.archive.org/web/20191130185653im_/https://www.hubspot.com/hubfs/assets/hubspot.com/home/home_page_logos_June_2019/Subaru_Logo_v2_186x63@2x.png" alt="subaru">
                         </div>
                         <div class="partner">
-                            <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/home/home_page_logos_June_2019/Wistia_logo@2x.png" alt="">
+                            <img src="https://web.archive.org/web/20191130185655im_/https://www.hubspot.com/hubfs/assets/hubspot.com/home/home_page_logos_June_2019/Wistia_logo@2x.png" alt="Wistia_logo">
                         </div>
                         <div class="partner">
-                            <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/home/home_page_logos_June_2019/Classpass-logo@2x.png" alt="">
+                            <img src="https://web.archive.org/web/20191130185656im_/https://www.hubspot.com/hubfs/assets/hubspot.com/home/home_page_logos_June_2019/Classpass-logo@2x.png" alt="classpass-logo">
                         </div>
                         <div class="partner">
-                            <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/home/home_page_logos_June_2019/VMware_logo_gry_RGB_300dpi@2x.png" alt="">
+                            <img src="https://web.archive.org/web/20191130185657im_/https://www.hubspot.com/hubfs/assets/hubspot.com/home/home_page_logos_June_2019/VMware_logo_gry_RGB_300dpi@2x.png" alt="vmware-logo">
                         </div>
                     </div>
                 </div>
                 <div class="bottom-box-bianco clearfix">
                     <div class="bottom-box-bianco-left">
                         <h2>start growing with hubspot today</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident</p>
+                        <p>With tools to make every part of your process more human and a support team excited to help you, getting started with inbound has never been easier.</p>
+                        <button type="button" name="button">Get HubSpot free</button>
+                        <p class="small-text"> Get started with FREE tools, or get more with our premium software.</p>
                     </div>
+
                     <div class="bottom-box-bianco-right">
-                        <img src="" alt="woman-smile">
+                        <img src="https://web.archive.org/web/20191130185658im_/https://www.hubspot.com/hubfs/assets/hubspot.com/_style-guide/sword-sprocket/Variation-1@2x.png" alt="woman-smile">
                     </div>
 
                 </div>
@@ -264,14 +267,60 @@
         <footer>
             <div class="container">
                 <div class="top-footer clearfix">
-                    <div class="top-footer-box"></div>
-                    <div class="top-footer-box"></div>
-                    <div class="top-footer-box"></div>
-                    <div class="top-footer-box"></div>
+                    <div class="top-footer-box">
+                        <div class="top-footer-title">increase your traffic</div>
+                        <ul>
+                            <li><a href="#"></a>ad software</li>
+                            <li><a href="#"></a>blog software</li>
+                            <li><a href="#"></a>SEO software</li>
+                            <li><a href="#"></a>social media software</li>
+                            <li><a href="#">content management system</a> </li>
+                        </ul>
+
+                    </div>
+                    <div class="top-footer-box">
+                        <div class="top-footer-title">increase your traffic</div>
+                        <ul>
+                            <li><a href="#"></a>ad software</li>
+                            <li><a href="#"></a>blog software</li>
+                            <li><a href="#"></a>SEO software</li>
+                            <li><a href="#"></a>social media software</li>
+                            <li><a href="#">content management system</a> </li>
+                        </ul>
+
+                    </div>
+                    <div class="top-footer-box">
+                        <div class="top-footer-title">increase your traffic</div>
+                        <ul>
+                            <li><a href="#"></a>ad software</li>
+                            <li><a href="#"></a>blog software</li>
+                            <li><a href="#"></a>SEO software</li>
+                            <li><a href="#"></a>social media software</li>
+                            <li><a href="#">content management system</a> </li>
+                        </ul>
+
+                    </div>
+                    <div class="top-footer-box">
+                        <div class="top-footer-title">increase your traffic</div>
+                        <ul>
+                            <li><a href="#"></a>ad software</li>
+                            <li><a href="#"></a>blog software</li>
+                            <li><a href="#"></a>SEO software</li>
+                            <li><a href="#"></a>social media software</li>
+                            <li><a href="#">content management system</a> </li>
+                        </ul>
+
+                    </div>
+                    
                 </div>
                 <div class="languanges">
                     <ul>
                         <li>English</li>
+                        <li>Deutsch</li>
+                        <li>日本語</li>
+                        <li>Español</li>
+                        <li>Português</li>
+                        <li>Français</li>
                     </ul>
                     <hr>
                 </div>
