fine bozza contenuti

--- a/index.html
+++ b/index.html
@@ -270,10 +270,10 @@
                     <div class="top-footer-box">
                         <div class="top-footer-title">increase your traffic</div>
                         <ul>
-                            <li><a href="#"></a>ad software</li>
-                            <li><a href="#"></a>blog software</li>
-                            <li><a href="#"></a>SEO software</li>
-                            <li><a href="#"></a>social media software</li>
+                            <li><a href="#">ad software</a></li>
+                            <li><a href="#">blog software</a></li>
+                            <li><a href="#">SEO software</a></li>
+                            <li><a href="#">social media software</a></li>
                             <li><a href="#">content management system</a> </li>
                         </ul>
 
@@ -308,32 +308,41 @@
                             <li><a href="#"></a>SEO software</li>
                             <li><a href="#"></a>social media software</li>
                             <li><a href="#">content management system</a> </li>
+                            <li><button type="button" name="button">Contact HubSpot Support</button></li>
+                            <li class="footer-loghi">
+                                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                                <a href="#"><i class="fab fa-instagram"></i></a>
+                                <a href="#"><i class="fab fa-youtube"></i></a>
+                                <a href="#"><i class="fab fa-twitter"></i></a>
+                                <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                            </li>
                         </ul>
 
                     </div>
-                    
+
                 </div>
-                <div class="languanges">
+                <div class="lingue">
                     <ul>
-                        <li>English</li>
-                        <li>Deutsch</li>
-                        <li>日本語</li>
-                        <li>Español</li>
-                        <li>Português</li>
-                        <li>Français</li>
+                        <li><a href="#">English</a></li>
+                        <li><a href="#">Deutsch</a></li>
+                        <li><a href="#">日本語</a></li>
+                        <li><a href="#">Español</a></li>
+                        <li><a href="#">Português</a></li>
+                        <li><a href="#">Français</a></li>
                     </ul>
-                    <hr>
                 </div>
 
 
                 <div class="footer-bottom clearfix">
                     <div class="footer-bottom-left">
-
+                        <img src="https://web.archive.org/web/20191130185659im_/https://www.hubspot.com/hubfs/HubSpot_Logos/HSLogo_gray.svg" alt="HubSpot logo-gray">
                     </div>
                     <div class="footer-bottom-right">
-
+                        <a href="#">legal stuff</a>
+                        <a href="#">privacy policy</a>
                     </div>
                 </div>
+                <div class="footer-copy">Copyright © 2019 HubSpot, Inc.</div>
             </div>
         </footer>
 
