--- a/index.html
+++ b/index.html
@@ -13,16 +13,17 @@
         <div class="fixed-bar clearfix">
             <div class="container">
                 <div class="fixed-bar-left">
-                    <i class="fas fa-globe"></i>
-                    <div class="lang-choose"><a href="#">english</a></div>
-                    <i class="fas fa-chevron-down"></i>
-                    <div class="contact-sales"><a href="#">contact sales</a></div>
+                    <ul>
+                        <li> <a id="trattino" href="#"><i class="fas fa-globe-europe"></i> english <i class="fas fa-chevron-down"></i></a></li>
+                        <li> <a href="#">contact sales</a></li>
+
+                    </ul>
                 </div>
 
                 <div class="fixed-bar-right">
-                    <i class="fas fa-search"></i>
-                    <button type="button" name="button">login</button>
-                    <button type="button" name="button">GetHubSpotFree</button>
+                    <a href="#"><i class="fas fa-search"></i></a>
+                    <button class="btn-small login" type="button" name="button">Log in</button>
+                    <button class="btn-small get-free" type="button" name="button">GetHubSpotFree</button>
                 </div>
             </div>
         </div>
@@ -37,16 +38,10 @@
                     </div>
                     <nav>
                         <ul class="clearfix">
-                            <li><a href="#">software</a></li>
-                            <li><a href="#"><i class="fas fa-chevron-down"></i></a></li>
-                            <li><a href="#">pricing</a></li>
-                            <li><a href="#">software</a></li>
-                            <li><a href="#">resources</a></li>
-                            <li><a href="#"><i class="fas fa-chevron-down"></i></a></li>
-                            <li><a href="#">patners</a></li>
-                            <li><a href="#"><i class="fas fa-chevron-down"></i></a></li>
-                            <li><a href="#">about</a></li>
-                            <li><a href="#"><i class="fas fa-chevron-down"></i></a></li>
+                            <li><a href="#">software <i class="fas fa-chevron-down"></i></a></li>
+                            <li><a href="#">pricing</a></li><li><a href="#">resources <i class="fas fa-chevron-down"></i></a></li>
+                            <li><a href="#">patners <i class="fas fa-chevron-down"></i></a></li>
+                            <li><a href="#">about <i class="fas fa-chevron-down"></i></a></li>
                         </ul>
                     </nav>
                 </div>
