--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <div class="jumbotron">
                         <h1>There's a better way to grow.</h1>
                         <p>Marketing, sales, and service software that helps your business grow without compromise. Because “good for the business” should also mean “good for the customer.”</p>
-                        <button type="button" name="button">Get HubSpot free</button>
+                        <button class="btn-big get-free" type="button" name="button">Get HubSpot free</button>
                         <p>Get started with FREE tools, and upgrade as you grow.</p>
                     </div>
                 </div>
