--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <div class="fixed-bar-right">
                     <a href="#"><i class="fas fa-search"></i></a>
                     <button class="btn-small login" type="button" name="button">Log in</button>
-                    <button class="btn-small get-free" type="button" name="button">GetHubSpotFree</button>
+                    <button class="btn-small get-free btn-orange" type="button" name="button">GetHubSpotFree</button>
                 </div>
             </div>
         </div>
@@ -53,7 +53,7 @@
                     <div class="jumbotron">
                         <h1>There's a better way to grow.</h1>
                         <p>Marketing, sales, and service software that helps your business grow without compromise. Because “good for the business” should also mean “good for the customer.”</p>
-                        <button class="btn-big get-free" type="button" name="button">Get HubSpot free</button>
+                        <button class="btn-big btn-orange" type="button" name="button">Get HubSpot free</button>
                         <p>Get started with FREE tools, and upgrade as you grow.</p>
                     </div>
                 </div>
@@ -68,21 +68,24 @@
                     <p>HubSpot offers a full stack of software for marketing, sales, and customer service, with a completely free CRM at its core. They’re powerful alone — but even better when used together.</p>
                 </div>
                 <div class="bottom box clearfix">
-                    <div class="box-bottom-left">
-                        <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/_style-guide/sword-sprocket/CRM-Illustration.svg" alt="book">
-                        <button type="button" name="button">Learn More</button>
-                    </div>
-                    <div class="box-bottom-right">
-                        <div class="box-bottom-right-text">
-                            <h4>Free HubSpot CMR</h4>
-                            <p>Everything you need to organize, track, and build better relationships with leads and customers. Yes, it's 100% free. Forever.</p>
-                            <p>POPULAR FEATURES</p>
-                            <hr>
-                            <ul>
-                                <li><i class="fas fa-check-circle"></i> contact inshights</li>
-                                <li><i class="fas fa-check-circle"></i> deals</li>
-                                <li><i class="fas fa-check-circle"></i> tasks</li>
-                            </ul>
+                    <div class="container-padding">
+
+                        <div class="box-bottom-left">
+                            <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/_style-guide/sword-sprocket/CRM-Illustration.svg" alt="book">
+                            <button class="btn-small btn-orange" type="button" name="button">Learn More</button>
+                        </div>
+                        <div class="box-bottom-right">
+                            <div class="box-bottom-right-text">
+                                <h4>Free HubSpot CMR</h4>
+                                <p>Everything you need to organize, track, and build better relationships with leads and customers. Yes, it's 100% free. Forever.</p>
+                                <p>popular features</p>
+                                <p class="line-through">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
+                                <ul>
+                                    <li><i class="fas fa-check-circle"></i> contact inshights</li>
+                                    <li><i class="fas fa-check-circle"></i> deals</li>
+                                    <li><i class="fas fa-check-circle"></i> tasks</li>
+                                </ul>
+                            </div>
 
                         </div>
                     </div>
@@ -92,7 +95,7 @@
                 <div class="card">
                     <div class="card-container">
                         <img src="https://www.hubspot.com/hubfs/Marketing-Hub-Free.svg" alt="circles">
-                        <h4> marketing hub</h4>
+                        <h4>marketing hub</h4>
                         <p>Marketing software to help you grow traffic, convert more visitors, and run complete inbound marketing campaigns at scale.</p>
                         <hr>
                         <p>popular features</p>
@@ -101,15 +104,15 @@
                             <li><i class="fas fa-check-circle"></i> marketing automation</li>
                             <li><i class="fas fa-check-circle"></i> analytics</li>
                         </ul>
-                        <button type="button" name="button">learn more</button>
+                        <button class="btn-small btn-orange" type="button" name="button">learn more</button>
 
                     </div>
                 </div>
                 <div class="card">
                     <div class="card-container">
                         <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/_style-guide/sword-sprocket/Sales-Professional-Illustration.svg" alt="circles">
-                        <h4> marketing hub</h4>
-                        <p>Marketing software to help you grow traffic, convert more visitors, and run complete inbound marketing campaigns at scale.</p>
+                        <h4>sales hub</h4>
+                        <p>Time-saving sales software that helps you get deeper insights into prospects, automate the tasks you hate, and close more deals faster.</p>
                         <hr>
                         <p>popular features</p>
                         <ul>
@@ -117,14 +120,14 @@
                             <li><i class="fas fa-check-circle"></i> marketing automation</li>
                             <li><i class="fas fa-check-circle"></i> analytics</li>
                         </ul>
-                        <button type="button" name="button">learn more</button>
+                        <button class="btn-small btn-orange"type="button" name="button">learn more</button>
                     </div>
                 </div>
                 <div class="card">
                     <div class="card-container">
                         <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/_style-guide/sword-sprocket/Service-Hub-Illustration.svg" alt="circles">
-                        <h4> marketing hub</h4>
-                        <p>Marketing software to help you grow traffic, convert more visitors, and run complete inbound marketing campaigns at scale.</p>
+                        <h4>service hub</h4>
+                        <p>Customer service software to help you connect with customers, exceed expectations, and turn them into promoters that grow your business.</p>
                         <hr>
                         <p>popular features</p>
                         <ul>
@@ -132,7 +135,7 @@
                             <li><i class="fas fa-check-circle"></i> marketing automation</li>
                             <li><i class="fas fa-check-circle"></i> analytics</li>
                         </ul>
-                        <button type="button" name="button">learn more</button>
+                        <button class="btn-small btn-orange" type="button" name="button">learn more</button>
                     </div>
                 </div>
 
