--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             <div class="container">
                 <div class="azzurro-text">
                     <h2>Learn and grow with award-winning support and thriving community behind you.</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat</p>
+                    <p>You don't have to go it alone. Master the inbound methodology and get the most out of your tools with HubSpot's legendary customer support team and a community of thousands of marketing and sales pros just like you.</p>
                 </div>
                 <div class="icons-box">
                     <div class="first-row clearfix">
@@ -158,23 +158,23 @@
                         </div>
                         <div class="icon-box">
                             <div class="icon-box-container">
-                                <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_agency.svg" alt="hands">
-                                <h2>150</h2>
-                                <p>HubSpot user groups</p>
+                                <img src="https://web.archive.org/web/20191130185640im_/https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_blog.svg" alt="hands">
+                                <h2>7M</h2>
+                                <p>montly visits</p>
                             </div>
                         </div>
                         <div class="icon-box">
                             <div class="icon-box-container">
-                                <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_agency.svg" alt="hands">
-                                <h2>150</h2>
-                                <p>HubSpot user groups</p>
+                                <img src="https://web.archive.org/web/20191130185642im_/https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_academy.svg" alt="hands">
+                                <h2>200K</h2>
+                                <p>certified professionals</p>
                             </div>
                         </div>
                         <div class="icon-box">
                             <div class="icon-box-container">
-                                <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_agency.svg" alt="hands">
-                                <h2>150</h2>
-                                <p>HubSpot user groups</p>
+                                <img src="https://web.archive.org/web/20191130185643im_/https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_inbound.svg" alt="hands">
+                                <h2>26K</h2>
+                                <p>registered attendees</p>
                             </div>
                         </div>
 
@@ -182,30 +182,30 @@
                     <div class="second-row clearfix">
                         <div class="icon-box">
                             <div class="icon-box-container">
-                                <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_agency.svg" alt="hands">
-                                <h2>150</h2>
-                                <p>HubSpot user groups</p>
+                                <img src="https://web.archive.org/web/20191130185644im_/https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_connect.svg" alt="hands">
+                                <h2>350</h2>
+                                <p>integrations</p>
+                            </div>
+                        </div>
+                        <div class="icon-box">
+                            <div class="icon-box-container">
+                                <img src="https://web.archive.org/web/20191130185645im_/https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_globe.svg" alt="hands">
+                                <h2>6</h2>
+                                <p>languages</p>
+                            </div>
+                        </div>
+                        <div class="icon-box">
+                            <div class="icon-box-container">
+                                <img src="https://web.archive.org/web/20191130185647im_/https://www.hubspot.com/hubfs/growthhub-white-small-1.svg" alt="hands">
+                                <h2>2.6M</h2>
+                                <p>social followers</p>
                             </div>
                         </div>
                         <div class="icon-box">
                             <div class="icon-box-container">
                                 <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_agency.svg" alt="hands">
-                                <h2>150</h2>
-                                <p>HubSpot user groups</p>
-                            </div>
-                        </div>
-                        <div class="icon-box">
-                            <div class="icon-box-container">
-                                <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_agency.svg" alt="hands">
-                                <h2>150</h2>
-                                <p>HubSpot user groups</p>
-                            </div>
-                        </div>
-                        <div class="icon-box">
-                            <div class="icon-box-container">
-                                <img src="https://www.hubspot.com/hubfs/assets/hubspot.com/parrotdad/homepage/homepage_community_agency.svg" alt="hands">
-                                <h2>150</h2>
-                                <p>HubSpot user groups</p>
+                                <h2>5K</h2>
+                                <p>profiles and counting</p>
                             </div>
                         </div>
                     </div>
@@ -219,33 +219,37 @@
                         <h2>64,500</h2>
                         <p>customers in over <strong>120</strong> countries growing their businesses with HubSpot</p>
                     </div>
-                    <div class="top-box-bianco-right clearfix">
-                        <div class="partner">
-                            <img src="https://web.archive.org/web/20191130185648im_/https://www.hubspot.com/hubfs/assets/hubspot.com/home/home_page_logos_June_2019/Atlassian-horizontal-blue@2x.png" alt="Atlassian">
+                    <div class="top-box-bianco-right">
+                        <div class="partner-first-row clearfix">
+
+                            <div class="partner">
+                                <img src="https://web.archive.org/web/20191130185648im_/https://www.hubspot.com/hubfs/assets/hubspot.com/home/home_page_logos_June_2019/Atlassian-horizontal-blue@2x.png" alt="Atlassian">
+                            </div>
+                            <div class="partner">
+                                <img src="https://web.archive.org/web/20191130185650im_/https://www.hubspot.com/hubfs/assets/hubspot.com/home/home_page_logos_June_2019/doordash_owler_20181011_194113_original@2x.png" alt="doordash">
+                            </div>
+                            <div class="partner">
+                                <img src="https://web.archive.org/web/20191130185651im_/https://www.hubspot.com/hubfs/assets/hubspot.com/home/home_page_logos_June_2019/g2crowd-logo@2x.png" alt="g2crowd">
+                            </div>
+                            <div class="partner">
+                                <img src="https://web.archive.org/web/20191130185652im_/https://www.hubspot.com/hubfs/assets/hubspot.com/home/home_page_logos_June_2019/purple-logo@2x.png" alt="Purple">
+                            </div>
                         </div>
-                        <div class="partner">
-                            <img src="https://web.archive.org/web/20191130185650im_/https://www.hubspot.com/hubfs/assets/hubspot.com/home/home_page_logos_June_2019/doordash_owler_20181011_194113_original@2x.png" alt="doordash">
-                        </div>
-                        <div class="partner">
-                            <img src="https://web.archive.org/web/20191130185651im_/https://www.hubspot.com/hubfs/assets/hubspot.com/home/home_page_logos_June_2019/g2crowd-logo@2x.png" alt="g2crowd">
-                        </div>
-                        <div class="partner">
-                            <img src="https://web.archive.org/web/20191130185652im_/https://www.hubspot.com/hubfs/assets/hubspot.com/home/home_page_logos_June_2019/purple-logo@2x.png" alt="Purple">
-                        </div>
-                        <div class="partner">
-                            <img src="https://web.archive.org/web/20191130185653im_/https://www.hubspot.com/hubfs/assets/hubspot.com/home/home_page_logos_June_2019/Subaru_Logo_v2_186x63@2x.png" alt="subaru">
-                        </div>
-                        <div class="partner">
-                            <img src="https://web.archive.org/web/20191130185655im_/https://www.hubspot.com/hubfs/assets/hubspot.com/home/home_page_logos_June_2019/Wistia_logo@2x.png" alt="Wistia_logo">
-                        </div>
-                        <div class="partner">
-                            <img src="https://web.archive.org/web/20191130185656im_/https://www.hubspot.com/hubfs/assets/hubspot.com/home/home_page_logos_June_2019/Classpass-logo@2x.png" alt="classpass-logo">
-                        </div>
-                        <div class="partner">
-                            <img src="https://web.archive.org/web/20191130185657im_/https://www.hubspot.com/hubfs/assets/hubspot.com/home/home_page_logos_June_2019/VMware_logo_gry_RGB_300dpi@2x.png" alt="vmware-logo">
+                        <div class="partner-second-row clearfix">
+                            <div class="partner">
+                                <img src="https://web.archive.org/web/20191130185653im_/https://www.hubspot.com/hubfs/assets/hubspot.com/home/home_page_logos_June_2019/Subaru_Logo_v2_186x63@2x.png" alt="subaru">
+                            </div>
+                            <div class="partner">
+                                <img src="https://web.archive.org/web/20191130185655im_/https://www.hubspot.com/hubfs/assets/hubspot.com/home/home_page_logos_June_2019/Wistia_logo@2x.png" alt="Wistia_logo">
+                            </div>
+                            <div class="partner">
+                                <img src="https://web.archive.org/web/20191130185656im_/https://www.hubspot.com/hubfs/assets/hubspot.com/home/home_page_logos_June_2019/Classpass-logo@2x.png" alt="classpass-logo">
+                            </div>
+                            <div class="partner">
+                                <img src="https://web.archive.org/web/20191130185657im_/https://www.hubspot.com/hubfs/assets/hubspot.com/home/home_page_logos_June_2019/VMware_logo_gry_RGB_300dpi@2x.png" alt="vmware-logo">
+                            </div>
                         </div>
                     </div>
-                </div>
                 <div class="bottom-box-bianco clearfix">
                     <div class="bottom-box-bianco-left">
                         <h2>start growing with hubspot today</h2>
