fine section bianco less or more

--- a/index.html
+++ b/index.html
@@ -250,11 +250,12 @@
                             </div>
                         </div>
                     </div>
+                </div>
                 <div class="bottom-box-bianco clearfix">
                     <div class="bottom-box-bianco-left">
                         <h2>start growing with hubspot today</h2>
                         <p>With tools to make every part of your process more human and a support team excited to help you, getting started with inbound has never been easier.</p>
-                        <button type="button" name="button">Get HubSpot free</button>
+                        <button class="btn-big btn-orange"type="button" name="button">Get HubSpot free</button>
                         <p class="small-text"> Get started with FREE tools, or get more with our premium software.</p>
                     </div>
 
